# LilyEngine

./: CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.md  PYTHON_LICENSE.md  README.md
src/: lua.cpp  lua.h  lua_exec.cpp  lua_exec.h  main.cpp  main.h  renderer.cpp  renderer.h  sdl_render.cpp  sdl_render.h
src/backend/: imgui_impl_sdl3.cpp
